--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -49,6 +49,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>cuda</artifactId>
+            <version>9.2-7.1-1.4.2-SNAPSHOT</version>
+            <classifier>windows-x86_64-redist</classifier>
+        </dependency>
+
+        <dependency>
             <groupId>wumo.sim</groupId>
             <artifactId>world</artifactId>
             <version>${project.version}</version>
