--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -34,6 +34,7 @@
             <groupId>org.tensorflow</groupId>
             <artifactId>proto</artifactId>
             <version>1.9.0-rc1</version>
+            <!--<scope>test</scope>-->
         </dependency>
 
         <dependency>
