--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -12,21 +12,16 @@
     <artifactId>algorithm</artifactId>
 
     <properties>
-        <javacpp-resets-tensorflow.version>1.9.0-rc1-1.4.2-SNAPSHOT</javacpp-resets-tensorflow.version>
+        <javacpp-resets-tensorflow.version>1.9.0-rc0-1.4.2-SNAPSHOT</javacpp-resets-tensorflow.version>
         <javacpp-resets-cuda.version>9.2-7.1-1.4.2-SNAPSHOT</javacpp-resets-cuda.version>
         <kotlin.version>1.2.50</kotlin.version>
         <atomicfu.version>0.10.3</atomicfu.version>
     </properties>
 
-
     <repositories>
         <repository>
             <id>sonatype</id>
-            <url>https://oss.sonatype.org/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>kotlinx</id>
-            <url>https://dl.bintray.com/kotlin/kotlinx/</url>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
     </repositories>
 
@@ -49,12 +44,12 @@
             <version>${javacpp-resets-tensorflow.version}</version>
             <classifier>windows-x86_64-gpu</classifier>
         </dependency>
-        <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>cuda</artifactId>
-            <version>${javacpp-resets-cuda.version}</version>
-            <classifier>windows-x86_64-redist</classifier>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
+            <!--<artifactId>cuda</artifactId>-->
+            <!--<version>${javacpp-resets-cuda.version}</version>-->
+            <!--<classifier>windows-x86_64-redist</classifier>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>wumo.sim</groupId>
