--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -12,25 +12,23 @@
     <artifactId>algorithm</artifactId>
 
     <properties>
-        <javacpp-resets-tensorflow.version>1.9.0-rc0-1.4.2-SNAPSHOT</javacpp-resets-tensorflow.version>
+        <javacpp-resets-tensorflow.version>1.9.0-rc1-1.4.2-SNAPSHOT</javacpp-resets-tensorflow.version>
         <javacpp-resets-cuda.version>9.2-7.1-1.4.2-SNAPSHOT</javacpp-resets-cuda.version>
         <kotlin.version>1.2.50</kotlin.version>
         <atomicfu.version>0.10.3</atomicfu.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>sonatype</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </repository>
-    </repositories>
-
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.commons</groupId>-->
+            <!--<artifactId>commons-lang3</artifactId>-->
+            <!--<version>3.7</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.tensorflow</groupId>
             <artifactId>proto</artifactId>
             <version>1.9.0-rc1</version>
-            <!--<scope>test</scope>-->
+            <!--<root>test</root>-->
         </dependency>
 
         <dependency>
@@ -44,12 +42,12 @@
             <version>${javacpp-resets-tensorflow.version}</version>
             <classifier>windows-x86_64-gpu</classifier>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
-            <!--<artifactId>cuda</artifactId>-->
-            <!--<version>${javacpp-resets-cuda.version}</version>-->
-            <!--<classifier>windows-x86_64-redist</classifier>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>cuda</artifactId>
+            <version>${javacpp-resets-cuda.version}</version>
+            <classifier>windows-x86_64-redist</classifier>
+        </dependency>
 
         <dependency>
             <groupId>wumo.sim</groupId>
