--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -19,7 +19,7 @@
                 <enabled>false</enabled>
             </releases>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </snapshots>
         </repository>
     </repositories>
@@ -32,13 +32,13 @@
                 <enabled>false</enabled>
             </releases>
             <snapshots>
-                <enabled>false</enabled>
+                <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
 
     <properties>
-        <javacpp-resets-tensorflow.version>1.9.0-rc1-1.4.2-SNAPSHOT</javacpp-resets-tensorflow.version>
+        <javacpp-resets-tensorflow.version>1.9.0-rc2-1.4.2-SNAPSHOT</javacpp-resets-tensorflow.version>
         <javacpp-resets-cuda.version>9.2-7.1-1.4.2-SNAPSHOT</javacpp-resets-cuda.version>
         <atomicfu.version>0.10.3</atomicfu.version>
     </properties>
