--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -38,8 +38,10 @@
     </pluginRepositories>
 
     <properties>
-        <javacpp-resets-tensorflow.version>1.9.0-rc2-1.4.2-SNAPSHOT</javacpp-resets-tensorflow.version>
-        <javacpp-resets-cuda.version>9.2-7.1-1.4.2-SNAPSHOT</javacpp-resets-cuda.version>
+        <tensorflow.version>1.9.0-rc2</tensorflow.version>
+        <javacpp.version>1.4.2-SNAPSHOT</javacpp.version>
+        <javacpp-resets-tensorflow.version>${tensorflow.version}-${javacpp.version}</javacpp-resets-tensorflow.version>
+        <javacpp-resets-cuda.version>9.2-7.1-${javacpp.version}</javacpp-resets-cuda.version>
         <atomicfu.version>0.10.3</atomicfu.version>
     </properties>
 
@@ -52,7 +54,7 @@
         <dependency>
             <groupId>org.tensorflow</groupId>
             <artifactId>proto</artifactId>
-            <version>1.9.0-rc1</version>
+            <version>1.9.0-rc2</version>
             <!--<root>test</root>-->
         </dependency>
 
