--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -38,7 +38,7 @@
     </pluginRepositories>
 
     <properties>
-        <tensorflow.version>1.9.0-rc2</tensorflow.version>
+        <tensorflow.version>1.9.0</tensorflow.version>
         <javacpp.version>1.4.2-SNAPSHOT</javacpp.version>
         <javacpp-resets-tensorflow.version>${tensorflow.version}-${javacpp.version}</javacpp-resets-tensorflow.version>
         <javacpp-resets-cuda.version>9.2-7.1-${javacpp.version}</javacpp-resets-cuda.version>
