--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -22,12 +22,34 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>kotlin-eap</id>
+            <name>kotlin-eap</name>
+            <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
             <id>sonatype-nexus-snapshots</id>
             <name>Sonatype Nexus Snapshots</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>kotlin-eap</id>
+            <name>kotlin-eap</name>
+            <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
