--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -48,12 +48,12 @@
             <version>${javacpp-resets-tensorflow.version}</version>
             <classifier>windows-x86_64</classifier>
         </dependency>
-        <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>tensorflow</artifactId>
-            <version>${javacpp-resets-tensorflow.version}</version>
-            <classifier>windows-x86_64-gpu</classifier>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
+            <!--<artifactId>tensorflow</artifactId>-->
+            <!--<version>${javacpp-resets-tensorflow.version}</version>-->
+            <!--<classifier>windows-x86_64-gpu</classifier>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>cuda</artifactId>
