--- a/algorithm/pom.xml
+++ b/algorithm/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>wumo.sim</groupId>
+            <artifactId>tensorflow</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
