--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
     </profiles>
 
     <properties>
+        <javacpp.version>1.4.3-SNAPSHOT</javacpp.version>
+        <tensorflow.version>1.10.0</tensorflow.version>
+        <javacpp-resets-tensorflow.version>${tensorflow.version}-${javacpp.version}</javacpp-resets-tensorflow.version>
+        <javacpp-resets-cuda.version>9.2-7.1-${javacpp.version}</javacpp-resets-cuda.version>
         <junit.version>4.12</junit.version>
         <slf4jVersion>1.7.25</slf4jVersion>
         <logbackVersion>1.2.3</logbackVersion>
