--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <tensorflow.version>1.10.0</tensorflow.version>
         <javacpp-resets-tensorflow.version>${tensorflow.version}-${javacpp.version}</javacpp-resets-tensorflow.version>
         <javacpp-resets-cuda.version>9.2-7.1-${javacpp.version}</javacpp-resets-cuda.version>
+        <platform.class>${platform}</platform.class>
         <junit.version>4.12</junit.version>
         <slf4jVersion>1.7.25</slf4jVersion>
         <logbackVersion>1.2.3</logbackVersion>
@@ -81,7 +82,7 @@
         <maven.assembly.plugin.version>3.0.0</maven.assembly.plugin.version>
         <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
-        <kotlin.version>1.2.60</kotlin.version>
+        <kotlin.version>1.2.61</kotlin.version>
         <kotlin.coroutines>0.24.0</kotlin.coroutines>
     </properties>
 
