--- a/python-interpreter/pom.xml
+++ b/python-interpreter/pom.xml
@@ -29,6 +29,7 @@
         </dependency>
     </dependencies>
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <!--<plugin>-->
                 <!--<groupId>org.antlr</groupId>-->
