--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <javacpp.version>1.4.3-SNAPSHOT</javacpp.version>
         <tensorflow.version>1.10.0</tensorflow.version>
         <javacpp-resets-tensorflow.version>${tensorflow.version}-${javacpp.version}</javacpp-resets-tensorflow.version>
-        <javacpp-resets-cuda.version>9.2-7.1-${javacpp.version}</javacpp-resets-cuda.version>
+        <javacpp-resets-cuda.version>9.2-7.2-${javacpp.version}</javacpp-resets-cuda.version>
         <platform.class>${platform}</platform.class>
         <junit.version>4.12</junit.version>
         <slf4jVersion>1.7.25</slf4jVersion>
@@ -84,7 +84,7 @@
         <maven.assembly.plugin.version>3.0.0</maven.assembly.plugin.version>
         <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
-        <kotlin.version>1.2.70</kotlin.version>
+        <kotlin.version>1.3-M2</kotlin.version>
         <kotlin.coroutines>0.24.0</kotlin.coroutines>
     </properties>
 
