--- a/world/pom.xml
+++ b/world/pom.xml
@@ -12,6 +12,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>ale-platform</artifactId>
+            <version>0.6.0-1.4.2</version>
+        </dependency>
+        <dependency>
             <groupId>wumo.sim</groupId>
             <artifactId>graphics</artifactId>
             <version>${project.version}</version>
