--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
     <modules>
         <module>world</module>
         <module>graphics</module>
-        <module>algorithm</module>
         <module>util</module>
         <module>tensorflow</module>
         <module>tensorflow-ops-generator</module>
@@ -84,7 +83,7 @@
         <maven.assembly.plugin.version>3.0.0</maven.assembly.plugin.version>
         <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
-        <kotlin.version>1.3-M2</kotlin.version>
+        <kotlin.version>1.3.0-rc-57</kotlin.version>
         <kotlin.coroutines>0.24.0</kotlin.coroutines>
     </properties>
 
