--- a/rl-algo/pom.xml
+++ b/rl-algo/pom.xml
@@ -13,6 +13,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>opencv-platform</artifactId>
+            <version>3.4.2-1.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco.javacpp-presets</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.4.2-1.4.2</version>
+            <classifier>linux-x86_64-gpu</classifier>
+        </dependency>
+        <dependency>
             <groupId>wumo.sim</groupId>
             <artifactId>tensorflow</artifactId>
             <version>${project.version}</version>
