--- a/tensorflow/pom.xml
+++ b/tensorflow/pom.xml
@@ -66,12 +66,12 @@
         <!--<version>${javacpp-resets-tensorflow.version}</version>-->
         <!--<classifier>windows-x86_64-gpu</classifier>-->
         <!--</dependency>-->
-        <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>cuda</artifactId>
-            <version>${javacpp-resets-cuda.version}</version>
-            <classifier>linux-x86_64-redist</classifier>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
+            <!--<artifactId>cuda</artifactId>-->
+            <!--<version>${javacpp-resets-cuda.version}</version>-->
+            <!--<classifier>linux-x86_64-redist</classifier>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>wumo.sim</groupId>
