--- a/rl-algo/pom.xml
+++ b/rl-algo/pom.xml
@@ -15,6 +15,13 @@
         <opencv.platform>linux-x86_64</opencv.platform>
     </properties>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.nd4j/nd4j-api -->
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-api</artifactId>
+            <version>1.0.0-beta2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>opencv-platform</artifactId>
@@ -63,34 +70,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
-            <!--<plugin>-->
-            <!--<artifactId>maven-assembly-plugin</artifactId>-->
-            <!--<version>${maven.assembly.plugin.version}</version>-->
-            <!--<configuration>-->
-            <!--<descriptorRefs>-->
-            <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
-            <!--</descriptorRefs>-->
-            <!--<archive>-->
-            <!--<manifest>-->
-            <!--<mainClass>wumo.sim.algorithm.drl.MainKt</mainClass>-->
-            <!--</manifest>-->
-            <!--</archive>-->
-            <!--<finalName>${project.name}</finalName>-->
-            <!--<appendAssemblyId>false</appendAssemblyId>-->
-            <!--</configuration>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>make-assembly</id>-->
-            <!--&lt;!&ndash; this is used for inheritance merges &ndash;&gt;-->
-            <!--<phase>package</phase>-->
-            <!--&lt;!&ndash; bind to the packaging phase &ndash;&gt;-->
-            <!--<goals>-->
-            <!--<goal>single</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
-
         </plugins>
     </build>
 
