--- a/world/pom.xml
+++ b/world/pom.xml
@@ -13,10 +13,15 @@
         <ale.version>0.6.0</ale.version>
     </properties>
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>org.bytedeco.javacpp-presets</groupId>-->
+            <!--<artifactId>ale-platform</artifactId>-->
+            <!--<version>${ale.version}-${javacpp.version}</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>ale-platform</artifactId>
-            <version>${ale.version}-${javacpp.version}</version>
+            <groupId>wumo</groupId>
+            <artifactId>atari-py</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>wumo.sim</groupId>
