--- a/atari-py/cppbuild/CMakeLists.txt
+++ b/atari-py/cppbuild/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 2.6)
 project(ale)
 set(ALEVERSION "0.5")
 
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
 option(USE_SDL "Use SDL" OFF)
 option(USE_RLGLUE "Use RL-Glue" OFF)
@@ -9,6 +11,15 @@ option(BUILD_EXAMPLES "Build Example Agents" OFF)
 option(BUILD_CPP_LIB "Build C++ Shared Library" OFF)
 option(BUILD_CLI "Build ALE Command Line Interface" OFF)
 option(BUILD_C_LIB "Build ALE C Library (needed for Python interface)" ON)
+option(NATIVE_ARCH "Enable compiler optimizations for the native processor architecture (if available)" ON)
+
+if (NATIVE_ARCH)
+    include(CheckCXXCompilerFlag)
+    CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_OPT_ARCH_NATIVE_SUPPORTED)
+    if (COMPILER_OPT_ARCH_NATIVE_SUPPORTED)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+    endif ()
+endif ()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wunused -fPIC -O3 -fomit-frame-pointer -D__STDC_CONSTANT_MACROS")
 add_definitions(-DHAVE_INTTYPES)
